--- a/style.css
+++ b/style.css
@@ -1,92 +1,99 @@
-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    height: 400px;
-    background-color: green;
-    z-index: 999;
+header
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	height: 200px;
+	background-color: green;
+	z-index: 999;
 }
 
-body {
-    background: beige;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+body
+{
+	background: beige;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-
-.lotto-box {
-    width: 100%;
-    height: auto;
-    margin-top: 400px;
-    padding: 3px;
-    background: beige;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: -1;
+.lotto-box
+{
+	width: 100%;
+	height: auto;
+	margin-top: 200px;
+	padding: 3px;
+	background: beige;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: -1;
 }
 
-.lotto-line {
-    padding: 20px;
-    border-bottom: 1px solid lightgray;
-
-    
+.lotto-line
+{
+	padding: 20px;
+	border-bottom: 1px solid lightgray;
 }
 
-.lotto-line-5th {
-    border-bottom: 2px solid gray;
+.lotto-line-5th
+{
+	border-bottom: 2px solid gray;
 }
 
-.lotto-line:last-child {
-    border: none;
+.lotto-line:last-child
+{
+	border: none;
 }
 
-.lotto-ball {
-    display: inline-block;
-    position: relative;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    vertical-align: top;
-    margin-right: 5px;
+.lotto-ball
+{
+	display: inline-block;
+	position: relative;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	vertical-align: top;
+	margin-right: 5px;
 }
 
-.lotto-number {
-    font-size: 50px;
-    font-weight: bold;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+.lotto-number
+{
+	font-size: 30px;
+	font-weight: bold;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
 }
 
-.lotto-btn {
-    padding: 5px 12px;
-    width: 300px;
-    height: 100px;
-    font-size: 25px;
-    font-weight: bold;
+.lotto-btn
+{
+	padding: 5px 12px;
+	width: 300px;
+	height: 100px;
+	font-size: 25px;
+	font-weight: bold;
 }
 
-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 200px;
-
+footer
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 200px;
+    background-color: yellow;
 }
